# sonny76

./: .gitignore  ChangeLog.md  README.md  build  credits  default.nix  deploy  hie.yaml  package.yaml  release  result  run  sass-watch  sonny76.cabal  stack.yaml  sync  watch-sass
app/: Abilities.hs  Ability.hs  AbilityData.hs  AbilityImpl.hs  AbilityList.hs  Battle.hs  Buff.hs  BuffImpl.hs  Hero.hs  Main.hs  Model.hs  SharedModel.hs  Types.hs  Update.hs  View.hs
assets/: style.css
assets/css/: ability-button.css  health-bar.css  heroes.css  keyframes.css  layout.css  style.css
assets/sass/: ability-button.sass  buff-bar.sass  focus-bar.sass  health-bar.sass  heroes.sass  info-box.sass  keyframes.sass  layout.sass  style.sass
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
