cabal-version: 1.12

name:           sonny76
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/sonny76#readme>
homepage:       https://github.com/githubuser/sonny76#readme
bug-reports:    https://github.com/githubuser/sonny76/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2021 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/sonny76

executable sonny76-exe
  main-is: Main.hs
  other-modules:
      Paths_sonny76
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-unused-top-binds -Wno-missing-deriving-strategies
  build-depends:
      base >=4.7 && <5
    , miso
    , containers
    , aeson
    , text
    , text-conversions

  if !impl(ghcjs)
    build-depends:
      jsaddle, jsaddle-warp, transformers,
      wai,
      wai-app-static,
      warp,
      websockets

  default-language: Haskell2010
